<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.NotfallKontaktActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:foreground="@drawable/nav_links"
                android:onClick="LeftImage"
                android:text=""
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="436dp" />

            <ImageView
                android:id="@+id/kontaktbild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:contentDescription="@string/KontaktBild"
                app:srcCompat="@drawable/feuerwehr"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="385dp" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:foreground="@drawable/nav_rechts"
                android:onClick="RightImage"
                android:text=""
                tools:layout_editor_absoluteX="274dp"
                tools:layout_editor_absoluteY="402dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/KontaktEigenschaftenPrioritaet" />

            <ImageView
                android:id="@+id/BildPrioritaet1"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet1"
                android:focusable="auto"
                android:onClick="ChangeContact"
                app:srcCompat="@drawable/prioritaet1" />

            <ImageView
                android:id="@+id/BildPrioritaet2"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet2"
                android:focusable="auto"
                android:onClick="ChangeContact"
                app:srcCompat="@drawable/prioritaet2" />

            <ImageView
                android:id="@+id/BildPrioritaet3"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet3"
                android:focusable="auto"
                android:onClick="ChangeContact"
                app:srcCompat="@drawable/prioritaet3" />

            <ImageView
                android:id="@+id/BildPrioritaet4"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet4"
                android:focusable="auto"
                android:onClick="ChangeContact"
                app:srcCompat="@drawable/prioritaet4" />

            <ImageView
                android:id="@+id/BildPrioritaet5"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/BildPrioritaet5"
                android:focusable="auto"
                android:onClick="ChangeContact"
                app:srcCompat="@drawable/prioritaet5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/KontaktEigenschaftenBeschreibung" />

            <EditText
                android:id="@+id/beschreibungseditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Kontaktname"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/KontaktEigenschaftenNummer" />

            <EditText
                android:id="@+id/telefoneditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Kontaktnummer"
                android:inputType="phone"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Close"
                android:text="@string/Abbrechen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ButtonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onWritePersistent"
                android:text="@android:string/ok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>