...
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/AktiviereMonitoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:text="@string/ApplikationsEigenschaftenAktiviereUeberwachung" />
...
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ApplikationsEigenschaftenVonZeit" />

            <EditText
                android:id="@+id/Zeit1_Von"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:inputType="time" />
...
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ApplikationsEigenschaftenBisZeit" />

            <EditText
                android:id="@+id/Zeit1_Bis"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:inputType="time" />
...
